// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the info trigger when no info is provided 1`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="2"
          >
            Item 1
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders all list items 1`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 2
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders correctly with the default props 1`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders the info on hover 1`] = `
<div
  class="fade show popover bs-popover-bottom"
  data-testid="info-list-info"
  id="popover-basic"
  role="tooltip"
  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  x-placement="bottom"
>
  <div
    class="arrow"
  />
  <div
    class="popover-body"
  >
    My First Item
  </div>
</div>
`;

exports[`renders the pagination when the list exceeds the page limit 1`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 2
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 3
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 4
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 5
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        Showing 
        1
         to 
        5
         of 
        12
      </div>
      <div
        class="col-lg-6"
      >
        <ul
          class="float-right pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-first"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  first_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                First
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-prev"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_left
                </i>
              </span>
              <span
                class="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-next"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_right
                </i>
              </span>
              <span
                class="sr-only"
              >
                Next
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-last"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  last_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                Last
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the pagination when the list exceeds the page limit 2`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 6
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 7
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 8
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 9
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 10
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        Showing 
        6
         to 
        10
         of 
        12
      </div>
      <div
        class="col-lg-6"
      >
        <ul
          class="float-right pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-first"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  first_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                First
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-prev"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_left
                </i>
              </span>
              <span
                class="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-next"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_right
                </i>
              </span>
              <span
                class="sr-only"
              >
                Next
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-last"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  last_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                Last
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the pagination when the list exceeds the page limit 3`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 2
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 3
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 4
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 5
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        Showing 
        1
         to 
        5
         of 
        12
      </div>
      <div
        class="col-lg-6"
      >
        <ul
          class="float-right pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-first"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  first_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                First
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-prev"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_left
                </i>
              </span>
              <span
                class="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-next"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_right
                </i>
              </span>
              <span
                class="sr-only"
              >
                Next
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-last"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  last_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                Last
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the pagination when the list exceeds the page limit 4`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 11
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 12
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        Showing 
        11
         to 
        12
         of 
        12
      </div>
      <div
        class="col-lg-6"
      >
        <ul
          class="float-right pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-first"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  first_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                First
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-prev"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_left
                </i>
              </span>
              <span
                class="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-next"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_right
                </i>
              </span>
              <span
                class="sr-only"
              >
                Next
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-last"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  last_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                Last
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the pagination when the list exceeds the page limit 5`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 2
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 3
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 4
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 5
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="row"
    >
      <div
        class="col-lg-6"
      >
        Showing 
        1
         to 
        5
         of 
        12
      </div>
      <div
        class="col-lg-6"
      >
        <ul
          class="float-right pagination"
        >
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-first"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  first_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                First
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-prev"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_left
                </i>
              </span>
              <span
                class="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-next"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  chevron_right
                </i>
              </span>
              <span
                class="sr-only"
              >
                Next
              </span>
            </a>
          </li>
          <li
            class="page-item"
          >
            <a
              class="page-link"
              data-testid="info-pagination-last"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
              >
                <i
                  class="material-icons"
                >
                  last_page
                </i>
              </span>
              <span
                class="sr-only"
              >
                Last
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`updates when the list changes 1`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`updates when the list changes 2`] = `
<div>
  <div>
    <table
      class="table table-sm"
    >
      <tbody>
        <tr>
          <td
            colspan="1"
          >
            Item 1
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
        <tr>
          <td
            colspan="1"
          >
            Item 2
          </td>
          <td
            class="text-right"
          >
            <i
              class="material-icons"
              data-testid="info-trigger"
            >
              info
            </i>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
